# q

./: CMakeLists.txt  README.md  gematria.txt
q/: block.q  fibonacci.q  hello.q  html.q  math.q  string.q
src/: _config.h  cli.c  opt.c  q.c  q.h  str.c  str.h  var.c  var.h
wiki/: Home.md  Operators.md
